--- a/style.css
+++ b/style.css
@@ -5,18 +5,73 @@
 body {
   font-size: 15px;
   font-family: Arial, Helvetica, sans-serif;
+  color: white;
+  line-height: 2;
+  background-color: rgb(27, 26, 26);
+}
+
+.header {
+  margin: 40px;
 }
 
 h1 {
   text-align: center;
+  font-size: 3em;
+  font-weight: 300;
+}
+
+h2 {
+  font-weight: 300;
+}
+
+.wrapper {
+  width: 70vw;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .main-img {
   width: 50%;
   margin: 10px auto;
   display: block;
+  border-radius: 15px;
+}
+
+ul,
+ol {
+  list-style-type: none;
+  padding: 0;
+  text-align: center;
+}
+
+.list-item {
+  display: flex;
+  align-items: center;
 }
 
 .tech-logo {
-  width: 35px;
+  width: 1em;
+  height: 1em;
+  margin-left: 10px;
+}
+
+.footer {
+  padding: 30px 0;
+}
+
+.link {
+  color: white;
+  font-size: 1.5em;
+  text-decoration: none;
+  padding: 10px;
+  background-color: transparent;
+  transition: all 1s ease;
+}
+
+.link:hover {
+  background-color: #fff;
+  color: rgb(27, 26, 26);
+  border-radius: 10px;
 }
